# AltTester-Unity-SDK

./: .editorconfig  .gitignore  .gitlab-ci.yml  AltDriver.csproj  AltTester.AltTesterUnitySDK.Driver.csproj  AltTester.AltTesterUnitySDK.Editor.csproj  AltTester.AltTesterUnitySDK.csproj  AltTester.csproj  AltTesterEditor.csproj  AltUnityDriver.csproj  AltUnityTester.csproj  AltUnityTester.unitypackage  AltUnityTesterEditor.csproj  AltUnityTesterLog.txt  Analytics.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props.xml  LICENSE  NewAssembly.csproj  Purchasing.Common.csproj  README.md  Unity.2D.Sprite.Editor.csproj  Unity.2D.Tilemap.Editor.csproj  Unity.Addressables.Editor.csproj  Unity.Addressables.csproj  Unity.Analytics.DataPrivacy.csproj  Unity.CollabProxy.Editor.csproj  Unity.EditorCoroutines.Editor.csproj  Unity.IO.Compression.csproj  Unity.InputSystem.ForUI.csproj  Unity.InputSystem.IntegrationTests.csproj  Unity.InputSystem.TestFramework.csproj  Unity.InputSystem.csproj  Unity.PlasticSCM.Editor.csproj  Unity.Postprocessing.Editor.csproj  Unity.Postprocessing.Runtime.csproj  Unity.ResourceManager.csproj  (+58 more)
Bindings~/python/alttester/: __init__.py  __version__.py  _websocket.py  altUnityObject.py  alt_unity_key_code.py  altby.py  altdriver.py  altdriver_base.py  altdriver_unity.py  altdriver_unreal.py  altobject.py  altobject_base.py  altobject_unreal.py  appium_helper.py  by.py  exceptions.py  keycode.py  logging.py  playerpref.py  portforwarding.py  pyproject.toml  reverse_port_forwarding.py  runner.py
Bindings~/python/alttester/commands/: __init__.py  base_command.py  get_png_screenshot.py  get_server_version.py  get_static_property.py  set_static_property.py
Bindings~/python/alttester/commands/AltTesterCommands/: __init__.py  add_notification_listener.py  remove_notification_listener.py  reset_input.py  set_server_logging.py
Bindings~/python/alttester/commands/AltUnityTesterCommands/: __init__.py  set_server_logging.py
Bindings~/python/alttester/commands/FindObjects/: __init__.py  find_object.py  find_object_at_coordinates.py  find_object_which_contains.py  find_objects.py  find_objects_which_contains.py  wait_for_component_property.py  wait_for_object.py  wait_for_object_to_not_be_present.py  wait_for_object_which_contains.py  wait_for_visual_element_property.py
Bindings~/python/alttester/commands/InputActions/: __init__.py  begin_touch.py  click_coordinates.py  end_touch.py  key_down.py  (+12 more)
Bindings~/robot/src/AltTesterLibrary/: AltTesterKeywords.py  __init__.py  pyproject.toml  version.py
(+2820 files in other folders)
