[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AltTester-Driver"
version = "2.2.5"
description = "Python bindings for the AltTester® framework. AltTester® is an open-source UI driven test automation tool that helps you find objects in your game and interacts with them."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Altom Consulting", email = "contact@alttester.com" }
]
dependencies = [
    "loguru",
    "deprecated",
    "websocket-client",
    "pure-python-adb"
]

requires-python = ">=3.4"

[project.urls]
Homepage = "https://alttester.com/docs/sdk/latest/"
BugTracker = "https://github.com/alttester/AltTester-Unity-SDK/issues"
Documentation = "https://alttester.com/docs/sdk/latest"
Source = "https://github.com/alttester/AltTester-Unity-SDK"
